--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ input{
 .pointer {cursor: pointer;}
 </style>
 <head>
-	<title>PS4MACEDO 7.55</title>
+	<title>PS4MACEDO 7.55 (Novo JB)</title>
 </head>
 	<body onload="go()" class="bg">
 		<script>
@@ -259,6 +259,11 @@ input{
 			setTimeout(function(){document.getElementById("progress").innerHTML="Webkit explorado com sucesso!!! <font color=\"#ee596f\">Selecione uma CARGA ÚTEL.</font>";}, 1000);
 			document.getElementById("myProgress").remove();
 			document.getElementById('load').innerHTML='<tr>'+
+					'<td><br/></td></tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<tr><td><hr size="1" color="#6089f6"></td></tr>';
+					'<td><br/></td></tr>'+
+					'<tr><td><br/></td></tr>'+					
 					'<td><h1 style=\'font-size:27px;text-align:center;\'><u><font color="#6089f6">CARGAS ÚTEIS</font></u></h1></td>'+
 					'</tr>'+
 					'<tr>'+
@@ -287,7 +292,8 @@ input{
 					'</tr>'+
 					'<tr><td><br/></td></tr>'+
 					'<tr><td><br/></td></tr>'+
-					'<tr><td><hr size="1" color="#6089f6"></td></tr>';
+					'<tr><td><hr size="1" color="#6089f6"></td></tr>'+
+					'<tr><td><h1 style=\'font-size:27px;text-align:center;\'><u><font color="#6089f6">pressione PS para sair e voltar para o Navegador de Internet</font></u></h1></td></tr>';
 		}
 		
 		window.midExploit = function()
