--- a/index.html
+++ b/index.html
@@ -256,10 +256,12 @@ input{
 		}
 		
 		function done(){
-			setTimeout(function(){document.getElementById("progress").innerHTML="Webkit explorado com sucesso!!! <font color=\"#ee596f\">Selecione uma CARGA ÚTEL.</font>";}, 1000);
+			setTimeout(function(){document.getElementById("progress").innerHTML="Webkit explorado com sucesso!!! <font color=\"#ee596f\">Selecione uma EXPLOIT/CARGA ÚTEL.</font>";}, 1000);
 			document.getElementById("myProgress").remove();
 			document.getElementById('load').innerHTML='<tr>'+
-					'<td><h1 style=\'font-size:27px;text-align:center;\'><u><font color="#6089f6">CARGAS ÚTEIS</font></u></h1></td>'+
+					'<td><br/></td></tr>'+
+					'<tr>'+
+					'<td><h1 style=\'font-size:27px;text-align:center;\'><u><font color="#6089f6">EXPLOITS 7.55</font></u></h1></td>'+
 					'</tr>'+
 					'<tr>'+
 					'<td align="center" colspan="8">'+
@@ -271,6 +273,13 @@ input{
 					'<a href="#" id="binloader" class="button" onMouseOver="progress.innerHTML=\'Permite enviar arquivos .BIN para o PS4 pela porta 9020.\'"; onmouseout="progress.innerHTML=\'PS4MACEDO Jailbreak 7.55\'" onclick="toggle_payload(\'binloader\'); return false" style="">Bin Loader</a>&nbsp;'+
 					'</td>'+
 					'</tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<tr>'+
+					'<td><h1 style=\'font-size:27px;text-align:center;\'><u><font color="#6089f6">CARGAS ÚTEIS</font></u></h1></td>'+
+					'</tr>'+
+					'<tr><td><hr size="1" color="#6089f6"></td></tr>'+
+					'<tr><td><br/></td></tr>'+
 					'<tr><td><br/></td></tr>'+
 					'<tr>'+
 					'<td align="center"  colspan="8">'+
@@ -287,7 +296,12 @@ input{
 					'</tr>'+
 					'<tr><td><br/></td></tr>'+
 					'<tr><td><br/></td></tr>'+
-					'<tr><td><hr size="1" color="#6089f6"></td></tr>';
+					'<tr><td><hr size="1" color="#6089f6"></td></tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<tr><td><br/></td></tr>'+
+					'<td><h1 style=\'font-size:22px;text-align:center;\'><font color="#8aff75">Use o botão \"PS\" para SAIR e ENTRAR no Navegador de Internet.</font></h1></td>';
 		}
 		
 		window.midExploit = function()
