--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ input{
 					'<tr><td><br/></td></tr>'+
 					'<tr><td><br/></td></tr>'+
 					'<tr><td><br/></td></tr>'+
-					'<td><h1 style=\'font-size:22px;text-align:center;\'><font color="#8aff75">Use o botão \"PS\" para SAIR e ENTRAR no Navegador de Internet.</font></h1></td>';
+					'<td><h1 style=\'font-size:22px;text-align:center;\'><font color="#8aff75">Agora use o botão \"PS\" para SAIR e ENTRAR no Navegador de Internet.</font></h1></td>';
 		}
 		
 		window.midExploit = function()
